# vlar

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: anonymizer.rs  entities.rs  lib.rs  main.rs  mapping.rs  patterns.rs
tests/: integration_test.rs
